--- a/tic-tac-toe/src/components/control-panel/control-panel.css
+++ b/tic-tac-toe/src/components/control-panel/control-panel.css
@@ -1,12 +1,12 @@
 #panel-control{
     display: flex;   
-    background-color: rgba(255, 229, 212, 0.653);
+    background-color: whitesmoke;
     padding: 30px;
     margin: 30px;
     border-radius: 15px;
-    border: outset 2px rgba(185, 148, 148, 0.345);
+    border: outset 2px rgba(191, 179, 179, 0.345);
     justify-content: space-between;
-    box-shadow: 0px 0px 10px rgb(62, 61, 61);
+    box-shadow: 0px 0px 15px rgba(85, 85, 85, 0.832);
     color: rgb(92, 91, 91);
     letter-spacing: 0.1px;
     align-items: center;
@@ -18,24 +18,26 @@
 #btPlay ,#btTop{
     border-radius: 5px;
     padding: 8px;
-    background-color: rgb(250, 162, 133);
-    border: outset 2px rgb(232, 144, 144);
+    background-color:  rgba(188, 186, 186, 0.873);
+    border: outset 2px  rgb(230, 229, 229);
     justify-self: left;
+    color:black;
 }
 
 #btTop:hover , #btPlay:hover{
     cursor: pointer;
-    background-color: rgb(233, 172, 145);
-    border-color:rgb(196, 152, 152);
+    background-color:rgb(188, 186, 186);
+    border-color:rgb(202, 199, 199);
 }
 #btTop:disabled , #btPlay:disabled{
     cursor: not-allowed;
-    background-color: rgb(232, 199, 199);
-    border-color:rgb(240, 218, 218);
+    color: rgba(92, 91, 91, 0.577);
+    background-color:rgba(188, 186, 186, 0.696);
+    border-color:rgba(202, 199, 199, 0.475);
 }
 
 #gameTime, #pointsTop, #points{
-    background-color: rgba(211, 209, 209, 0.692);
+    background-color: rgba(211, 209, 209, 0.514);
     border-radius: 5px;
     padding: 4px 6px 1px 6px;
     align-self: center;
