--- a/tic-tac-toe/src/components/game-panel/game-panel.css
+++ b/tic-tac-toe/src/components/game-panel/game-panel.css
@@ -1,4 +1,16 @@
 #game-panel{
-    background-color: rgba(255, 229, 212, 0.653);
+    background-color: whitesmoke;
     border: outset 2px rgba(185, 148, 148, 0.345);
+    border-radius: 7px;
+    padding: 6px;
+}
+.game-row{
+    display: flex;
+}
+
+#row1,#row2{
+    border-bottom: 5px solid rgb(93, 92, 92);
+}
+.tab1, .tab2{
+    border-right: 5px solid rgb(93, 92, 92);
 }
