--- a/tic-tac-toe/src/components/board-piece/board-piece.css
+++ b/tic-tac-toe/src/components/board-piece/board-piece.css
@@ -1,11 +1,22 @@
 .piece{
     background-color: white;
+    color: black;
     border-radius: 4px;
     margin: 4px;
-    border:none;
+    border: none;
     padding: 7px;
+    width: 30px;
+    height: 30px;
+    font-size:140%;
+    line-height: 10px;
+    font-weight: bold;
+    position: relative;
 }
 .piece:hover{
-    background-color: rgb(230, 229, 229);
+    background-color: rgb(218, 216, 216);
 }
+.piece:disabled{
+    background-color: rgb(236, 234, 234);;
+}
+
 
