--- a/tic-tac-toe/src/components/game-panel/game-panel.css
+++ b/tic-tac-toe/src/components/game-panel/game-panel.css
@@ -1,8 +1,10 @@
 #game-panel{
-    background-color: whitesmoke;
+    background-color: rgb(236, 234, 234);
+    box-shadow: 0px 0px 20px rgba(155, 155, 155, 0.84);
     border: outset 2px rgba(185, 148, 148, 0.345);
     border-radius: 7px;
     padding: 6px;
+    margin: 10px;
 }
 .game-row{
     display: flex;
