--- a/tic-tac-toe/src/components/control-panel/control-panel.css
+++ b/tic-tac-toe/src/components/control-panel/control-panel.css
@@ -10,7 +10,7 @@
     color: rgb(92, 91, 91);
     letter-spacing: 0.1px;
     align-items: center;
-    width: 570px;
+    width: 700px;
 }
 
 /*Botoes -  normal, hover , disabled*/
@@ -24,10 +24,10 @@
     color:black;
 }
 
-#vs{
+#vs, #vsComputador{
     border-radius: 5px;
     padding: 8px;
-    background-color:  rgba(188, 186, 186, 0.873);
+    background-color:  rgba(219, 219, 219, 0.873);
     border: outset 2px  rgb(230, 229, 229);
     justify-self: left;
     color:black;
