--- a/tic-tac-toe/src/assets/App.css
+++ b/tic-tac-toe/src/assets/App.css
@@ -4,4 +4,5 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
